Webkit Mac10.6 Builder-Tester (Skia)(deps)(dbg) has compile failures https://bugs.webkit.org/show_bug.cgi?id=66703

This error was detected by the debug build of the Chromium WebKit
Canary.

Reviewed by James Robinson.

No new tests. This change suppresses a compile-time warning
but does not affect the generated code.

* platform/graphics/mac/FontCustomPlatformData.h:
Replaced struct with class in a forward reference.


Canonical link: https://commits.webkit.org/82519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93540 268f45cc-cd09-0410-ab3c-d52691b4dbfc